# hunspell

./: .gitignore  CMakeLists.txt
src/hunspell/: CMakeLists.txt
